refactor(API): migrate to TS, harden request validation, implement user update endpoint, align deploy to use compiled files
