# visitas-virtuales-api/docs/openapi.json
@@ -19,6 +19,68 @@
     }
   ],
   "paths": {
+    "/api/v1/centers": {
+      "get": {
+        "summary": "Obtener listado de todos los centros disponibles",
+        "description": "Esta ruta permite a los usuarios obtener una lista de todos los centros disponibles en el sistema",
+        "tags": [
+          "Centros"
+        ],
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Centros obtenidos exitosamente",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string",
+                      "example": "Centros obtenidos exitosamente"
+                    },
+                    "centers": {
+                      "type": "array",
+                      "items": {
+                        "type": "object",
+                        "properties": {
+                          "id": {
+                            "type": "string",
+                            "example": 1
+                          },
+                          "name": {
+                            "type": "string",
+                            "example": "Instituto Madrid"
+                          },
+                          "description": {
+                            "type": "string",
+                            "example": "Centro educativo principal en Madrid"
+                          },
+                          "location": {
+                            "type": "string",
+                            "example": "Madrid, España"
+                          }
+                        }
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "No se proporcionó un token de acceso"
+          },
+          "403": {
+            "description": "Token de acceso inválido o expirado"
+          }
+        }
+      }
+    },
     "/api/v1/centers/{centerId}/pois": {
       "post": {
         "summary": "Crear un nuevo POI para un centro específico (solo para administradores o profesores)",
@@ -308,68 +370,6 @@
         }
       }
     },
-    "/api/v1/centers": {
-      "get": {
-        "summary": "Obtener listado de todos los centros disponibles",
-        "description": "Esta ruta permite a los usuarios obtener una lista de todos los centros disponibles en el sistema",
-        "tags": [
-          "Centros"
-        ],
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Centros obtenidos exitosamente",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "properties": {
-                    "message": {
-                      "type": "string",
-                      "example": "Centros obtenidos exitosamente"
-                    },
-                    "centers": {
-                      "type": "array",
-                      "items": {
-                        "type": "object",
-                        "properties": {
-                          "id": {
-                            "type": "string",
-                            "example": 1
-                          },
-                          "name": {
-                            "type": "string",
-                            "example": "Instituto Madrid"
-                          },
-                          "description": {
-                            "type": "string",
-                            "example": "Centro educativo principal en Madrid"
-                          },
-                          "location": {
-                            "type": "string",
-                            "example": "Madrid, España"
-                          }
-                        }
-                      }
-                    }
-                  }
-                }
-              }
-            }
-          },
-          "401": {
-            "description": "No se proporcionó un token de acceso"
-          },
-          "403": {
-            "description": "Token de acceso inválido o expirado"
-          }
-        }
-      }
-    },
     "/api/v1/me": {
       "get": {
         "summary": "Obtener perfil del usuario autenticado (solo para administradores y profesores)",
@@ -478,7 +478,7 @@
         }
       },
       "patch": {
-        "summary": "Editar perfil del usuario autenticado (solo para administradores y profesores) - SIN IMPLEMENTAR",
+        "summary": "Editar perfil del usuario autenticado (solo para administradores y profesores)",
         "description": "Permite al usuario autenticado editar su propio perfil, incluyendo su email, nombre de usuario y contraseña. Requiere un token de acceso válido en el header Authorization.",
         "tags": [
           "User"
@@ -915,7 +915,7 @@
     "/api/v1/users/auth/refresh": {
       "post": {
         "summary": "Renovar tokens de autenticación utilizando token de actualización (solo para administradores y profesores)",
-        "description": "Permite a un usuario renovar sus tokens utilizando un token de actualización válido. Devuelve un nuevo token de acceso en la respuesta y asigna un nuevo token de actualización en una cookie HTTP-only. Los invitados no necesitan renovar tokens, se les permite el acceso a las rutas públicas sin autenticación.",
+        "description": "Permite a un usuario renovar sus tokens utilizando un token de actualización válido. Devuelve un nuevo token de acceso en la respuesta y asigna un nuevo token de actualización en una cookie HTTP-only. Los invitados no necesitan renovar tokens, se les permite el acceso a las rutas públicas sin autenticación. La validación del token se realiza dentro del handler.",
         "tags": [
           "User"
         ],
